# Gold-Miner-On-chain

./: .env.example  .gitignore  LICENSE  Makefile  README.en.md  README.md
.github/workflows/: ci.yml
assets/: phaser-asset-manifest.json
backend/: Cargo.toml
backend/goldminer-api/: Cargo.toml
backend/goldminer-api/src/: app_state.rs  chain_client.rs  config.rs  lib.rs  main.rs  models.rs  router.rs
backend/goldminer-api/src/db/: campaign_read_model.rs  campaign_write.rs  common.rs  indexed_read_model_write.rs  indexer_worker.rs  mod.rs  ranked_read_model.rs  relay_worker.rs  run_write.rs  schema.rs  session_write.rs  session_write_model.rs  sqlite_decode.rs  tests.rs
backend/goldminer-api/src/handlers/: campaigns.rs  mod.rs  read_model.rs  runs.rs  sessions.rs
backend/goldminer-api/src/services/: mod.rs  read_model_service.rs
backend/goldminer-core/: Cargo.toml
backend/goldminer-core/src/: lib.rs  wasm.rs
backend/goldminer-core/src/ranked/: manifest.rs  mod.rs  replay.rs  runtime.rs  tests.rs
backend/goldminer-core/tests/: ranked_challenge_runtime.rs
contracts/: foundry.toml
contracts/config/: ranked-levels.json
contracts/script/: Deploy.s.sol  RegisterLevels.s.sol
contracts/src/: GoldMinerLevelCatalog.sol  GoldMinerScoreboard.sol
frontend/: .env.example  .env.local.example  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
scripts/: build-ranked-manifest.js  build-ranked-wasm.sh  generate-hd-runtime-assets.mjs  register-ranked-levels.js  run-frontend-smoke.mjs  sync-contract.js
(+171 files in other folders)
