[package]
name = "goldminer-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
alloy.workspace = true
goldminer-core = { path = "../goldminer-core" }
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
dotenvy.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ruint.workspace = true
