[package]
name = "goldminer-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = []
wasm = ["dep:wasm-bindgen"]

[dependencies]
alloy.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
ruint.workspace = true
wasm-bindgen = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.17", features = ["js"] }
